Added function to Change Canvas size

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             
             <div>
                 <h1>Etch-A-Sketch</h1>
+                <button id="changeSize">Change Canvas Size</button>
                 <button id="clear">Clear Canvas</button>
                 <button id="blackPixel">Black Pixel</button>
                 <button id="randomColor">Random Color Pixel</button>
